...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <Button
        android:id="@+id/single_trip_add_item"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"

        android:onClick="addItem"
        android:text="@string/add_item"
...
